kubernetes/monitoring/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
  annotations:
    prometheus.io/scrape: "true"
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - name: ui
      port: 3000
      targetPort: 3000
