kubernetes/monitoring/grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
spec:
  rules:
    - host: grafana.expected.sh
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 80
